--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^2.1.0
+  weather: ^2.0.1
+  intl: ^0.17.0
+  geolocator: ^7.4.0
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +62,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - icons/cloud-sun.png
+    - icons/hand-wave.png
+    - icons/weather-lightning.png
+    - icons/weather-moonny.png
+    - icons/weather-rain.png
+    - icons/weather-sunny.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
